# cam-sonar-projection-sim

./: .gitignore  README.md  environment.yml  pyproject.toml
src/sonarcam/: app.py  config.py
src/sonarcam/gui/: main_window.py  projection_view.py  world_view_3d.py  world_view_simple2d.py
src/sonarcam/models/: camera.py  rig.py  sonar.py
src/sonarcam/projection/: algorithm_placeholder.py  ground_truth.py
src/sonarcam/renderers/: camera_renderer.py  sonar_from_depth.py  sonar_renderer.py
src/sonarcam/scene/: objects.py  primitives.py  scene.py
src/sonarcam/utils/: geometry.py  pointcloud.py  sonar_viz.py  transforms.py
tests/: test_smoke_gui.py
