[project]
name = "sonarcam-sim"
version = "0.1.0"
description = "WSL2-safe sonar-camera simulator (PyQt5 + 2D)"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
